security: add brand-config.js to .gitignore and create example template
- Add brand-config.js to .gitignore to prevent committing API keys
- Create brand-config.example.js as a template (without API key)
- Remove brand-config.js from git tracking (file remains locally)

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ Thumbs.db
 
 # Keep all other files for deployment
 
+# Brand config with API keys (use brand-config.example.js as template)
+js/brand-config.js
+
